--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,11 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+
+
+    <string name="upload_logo">UPLOAD LOGO</string>
+    <string name="create_project">CREATE PROJECT</string>
+    <string name="proceed">PROCEED</string>
+    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>
+
 </resources>
